tests/baselines/reference/aliasWithInterfaceExportAssignmentUsedInVarInitializer.errors.txt
==== tests/cases/compiler/aliasWithInterfaceExportAssignmentUsedInVarInitializer_1.ts (1 errors) ====
    import moduleA = require("aliasWithInterfaceExportAssignmentUsedInVarInitializer_0");
    var d = b.q3;
            ~
!!! aliasWithInterfaceExportAssignmentUsedInVarInitializer_1.ts(2,9): error TS2095: Could not find symbol 'b'.
==== tests/cases/compiler/aliasWithInterfaceExportAssignmentUsedInVarInitializer_0.ts (0 errors) ====
    interface c {
        q3: number;
    }
    export = c;
    